--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3.3"
+        "php": ">=5.3.3",
+        "ocramius/generated-hydrator": "1.2.*@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
