--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,11 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "ocramius/generated-hydrator": "1.2.*@dev"
+        "ocramius/generated-hydrator": "1.2.*@dev",
+        "zendframework/zend-filter": "2.*",
+        "zendframework/zend-i18n": "2.*",
+        "zendframework/zend-validator": "2.*",
+        "zendframework/zend-crypt": "2.*"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
