--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,12 @@
     "description": "Tecnospeed Manager eDoc SDK for PHP",
     "keywords": ["Tecnospeed", "sdk"],
     "type": "library",
+    "homepage": "https://github.com/kleberksms/php-tecnospeed-sdk-v1",
+    "license": "",
     "authors": [
         {
-            "name": "Bellinati Perez"
+            "name": "Bellinati Perez",
+            "homepage": "http://www.bellinatiperez.com.br"
         }
     ],
     "require": {
@@ -20,6 +23,9 @@
         "phpunit/phpunit": "3.7.*",
         "mockery/mockery": "dev-master",
         "guzzlehttp/guzzle": "~4.0"
+    },
+    "suggest": {
+        "guzzlehttp/guzzle": "Allows for implementation of the Guzzle HTTP client"
     },
     "autoload": {
         "psr-4": {
