--- a/src/Tecnospeed/Config/Configuration.php.dist
+++ b/src/Tecnospeed/Config/Configuration.php.dist
@@ -6,7 +6,8 @@ namespace Tecnospeed\Config;
  * @todo Remover isto deste path
  */
 return array(
-    'url'=>'192.168.0.0:8081',
+    'url'=>'192.168.0.0',
+    'port'=>'8081',
     'CNPJ'=>'00000000000000',
     'usuario'=>'admin',
     'senha'=>'123mudar',
