--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,13 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "ocramius/generated-hydrator": "1.2.*@dev",
         "zendframework/zend-filter": "2.*",
         "zendframework/zend-i18n": "2.*",
         "zendframework/zend-validator": "2.*",
-        "zendframework/zend-crypt": "2.*"
+        "zendframework/zend-crypt": "2.*",
+        "respect/validation": "0.10.*@dev"
     },
+    "minimum-stability":"dev",
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
         "mockery/mockery": "dev-master",
